--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "lib": [
       "es2021"
     ],
-    "moduleResolution": "node",
+    "moduleResolution": "node16",
     "allowJs": true,
     "declaration": true,
     "declarationMap": true,
